[package]
name = "ide-loader"
version = "1.4.0"
edition = "2024"
authors = ["Seemann <mail@sannybuilder.com>"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gta-ide-parser = "0.0.4"
ctor = "0.1.21"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
cleo_redux_sdk = "0.0.14"