[package]
name = "events"
version = "0.1.0"
edition = "2021"
authors = ["Seemann <mail@sannybuilder.com>"]

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cleo_redux_sdk = "*"
ctor = "0.1.21"
null_fn = "0.1.1"
detour = {git = "https://github.com/x87/detour-rs.git"}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = {version = "1.0.85", features = ["preserve_order"]}
lazy_static = "1.4.0"
version_info = "*"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi"] }