[package]
name = "events"
version = "1.1.0"
edition = "2021"
authors = ["Seemann <mail@sannybuilder.com>"]

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cleo_redux_sdk = "*"
ctor = "0.2.6"
null_fn = "0.1.1"
retour = "0.3.1"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = {version = "1.0.111", features = ["preserve_order"]}
lazy_static = "1.4.0"