[package]
name = "events"
version = "1.2.0"
edition = "2024"
authors = ["Seemann <mail@sannybuilder.com>"]

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cleo_redux_sdk = "*"
ctor = "0.1.21"
null_fn = "0.1.1"
minhook = "0.7.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.140", features = ["preserve_order"]}
lazy_static = "1.4.0"